<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_play_music_app"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="playmusic.jd.com.playmusicapp.HomeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_text" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/my_artis_tap"
        style="@style/linear_layout_style"
        android:background="@color/colorPrimary"
        android:onClick="onClick">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/my_artist_text"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/my_album_tap"
        style="@style/linear_layout_style"
        android:background="@color/colorAccent"
        android:onClick="onClick">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_album_text"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/my_song_tap"
        style="@style/linear_layout_style"
        android:background="@color/colorOrg"
        android:onClick="onClick">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_song_text"
            android:textAppearance="?android:textAppearanceLarge"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>
